css/custom.css
/* CSS for www.jamesluck.com 
 * author: delucks
 */

html {
  font-size: 12px;
  color: #000;
  background-color: #ddd;
  font-family: monospace;
}

#container {
  width: 100%;
  height: 100%;
  position: relative;
}

.header {
  font-size: 1.5em;
  text-align: center;
  margin-left: 10px;
  margin-right: 10px;
}

.topic {
  margin: 10px;
  padding: 5px;
  border: 1px solid #000;
  border-radius: 4px;
}

ul {
  list-style: none;
  padding-left: 5px;
}

/* Styles of the terminal */

#term {
  font-size: 12px;
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

#term a {
  color: #fff;
}

